--- a/config.template.yml
+++ b/config.template.yml
@@ -1,7 +1,7 @@
 logLevel: info
 # If set to false the bridge will only handle actions but will 
 # not request updates from the Plugwise gateway at regular intervals
-plugwiseUpdate: true
+plugwisePolling: true
 plugwise:
   # mdns or ip here
   baseUrl: 'http://smilexxxxxx.local/'
@@ -10,7 +10,7 @@ plugwise:
   # on the back of the Plugwise Adam the password is shown
   password: 'xxxxxxxxxxx'
   # how often to pull updates from the Plugwise Adam in ms
-  pullPause: 10000
+  pollInterval: 10000
 mqtt:
     # If set to true messages will be shown in the log but
     # not send to the MQTT servera
