--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "build:module": "tsc -p tsconfig.module.json",
     "build:webpack": "npx webpack --mode=production",
     "fix": "run-s fix:*",
-    "fix:prettier": "prettier \"src/**/*.ts\" --write",
+    "fix:prettier": "prettier 'src/**/*.{js,ts,tsx}' --write",
     "fix:eslint": "eslint --fix --project .",
     "test": "run-s build test:*",
-    "test:lint": "eslint --project . && prettier \"src/**/*.ts\" --list-different",
+    "test:lint": "eslint 'src/**/*.{js,ts,tsx}' && prettier 'src/**/*.{js,ts,tsx}' --list-different",
     "test:unit": "nyc --silent ava",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
     "cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
@@ -81,7 +81,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.5",
     "standard-version": "^6.0.1",
     "trash-cli": "^3.0.0",
     "ts-loader": "^7.0.5",
