--- a/package.json
+++ b/package.json
@@ -77,11 +77,14 @@
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^7.3.1",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "gh-pages": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
     "prettier": "^2.0.5",
+    "prettylint": "^1.0.0",
     "standard-version": "^6.0.1",
     "trash-cli": "^3.0.0",
     "ts-loader": "^7.0.5",
@@ -103,9 +106,6 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "prettier": {
-    "singleQuote": true
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
