--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,5 @@
   "singleQuote": true,
   "trailingComma": "all",
   "semi": false,
-  "bracketSpacing": false,
-  "spaceBeforeFunctionParen": false
+  "bracketSpacing": false
 }
